--- a/main/index.html
+++ b/main/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/main/style.css">
     
 
-<title>Document</title>
+<title>DO NOT SUBMIT</title>
 </head>
 <body>
     
